--- a/src/app/components/Banner.module.css
+++ b/src/app/components/Banner.module.css
@@ -1,4 +1,6 @@
 /* components/Banner.module.css */
+@import url(https://db.onlinewebfonts.com/c/879269be836bf8d970d4ef4fb0e54f42?family=GT+America+Extended+Regular);
+
 .banner {
     position: relative;
     height: 100vh;
@@ -10,8 +12,8 @@
     overflow: hidden;
     border-radius: 40px; 
     top: 60px;
-    
-    
+    font-family: 'GT America Extended Regular';
+    font-weight: 900;
 }
   
   
@@ -29,8 +31,8 @@
   
   .image1, .image2, .image3 {
     
-    width: 220px;
-    height: 300px;
+    width: 20%;
+    height: 40%;
     object-fit: cover;
     border-radius: 10px;
     z-index: 1;
@@ -50,7 +52,6 @@
   
   .text h1 {
     font-size: 8rem;
-    font-weight: bold;
     
     
     
@@ -59,5 +60,35 @@
   .text p {
     font-size: 1.2rem;
     margin-top: 1rem;
+    font-weight: 100;
   }
   
+  .socialLinks {
+    display: flex;
+    justify-content: center;
+    gap: 15px; 
+    margin-top: 20px;
+}
+
+.socialLink {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    transition: color 0.3s;
+    font-size: 2rem;
+    width: 40px;
+    height: 40px;
+}
+
+.socialLink:hover {
+    color: #555;
+}
+
+.logoImage {
+    width: 40px;
+    height: 40px;
+    object-fit: contain;
+}
+
+
